feat: 문서 검색 및 관리 기능 추가
- DocumentService와 DocumentRepository로 문서 검색 로직 구현
- DocumentApi 추가로 클라이언트에서 문서 데이터 처리 지원
- 문서 관련 도메인 객체와 검색 객체 생성
- API 요청 및 응답 처리용 클래스 추가
- DocumentNative를 통해 클라이언트와의 데이터 변환 지원
- Mock 데이터에 속성 및 구조 개선